@@ -16,6 +16,10 @@ PHP                                                                        NEWS
   . Fixed bug #75712 (getenv in php-fpm should not read $_ENV, $_SERVER).
     (Jakub Zelenka)
 
+- GD:
+  . Fixed bug GH-12019 (detection of image formats in system gd library).
+    (Michael Orlitzky)
+
 - MySQLnd:
   . Fixed bug GH-11950 ([mysqlnd] Fixed not to set CR_MALFORMED_PACKET to error
     if CR_SERVER_GONE_ERROR is already set). (Saki Takamachi)
